--- a/style.css/index.css
+++ b/style.css/index.css
@@ -3,12 +3,36 @@
 body
 {
     width: 100%;
+    height: 100%;
     text-align: center;
-    background-color: rgb(233, 233, 233);
+    color: #369304;
     font-family: 'Courier New', Courier, monospace;
+    background-image: url("https://images.hdqwalls.com/wallpapers/matrix-code-minimal-qz.jpg");
+    background-size: cover;
 }
 h1
 {
     font-size: 40pt;
     font-family: Arial, Helvetica, sans-serif;
+}
+input[type=button]
+{
+    background-color: #224406; 
+    border: none;
+    border-radius: 40px;
+    color: #369304;
+    padding: 15px 32px;
+    font-family: 'Segoe UI';
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+}
+input[type=button]:hover 
+{
+    box-shadow: 0 12px 16px 0 #369304,0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
