--- a/style.css/index.css
+++ b/style.css/index.css
@@ -4,6 +4,7 @@ body
 {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     text-align: center;
     color: #369304;
     font-family: 'Courier New', Courier, monospace;
