--- a/style.css/index.css
+++ b/style.css/index.css
@@ -9,7 +9,7 @@ body
     color: #369304;
     font-family: 'Courier New', Courier, monospace;
     background-image: url("https://images.hdqwalls.com/wallpapers/matrix-code-minimal-qz.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
 }
 h1
 {
